--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TOKEN=your_discord_bot_token
-CLIENT_ID=your_client_id
+TOKEN=MTM3Njk2ODY1NDIwOTY4MzU1Nw.GpRLe7.I4TdDOp5_ZqQ_OINNVnfOkofRHNIwlndlWc8fI
+CLIENT_ID=1376968654209683557
 
